--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -60,6 +60,11 @@
             <div class="col-md-offset-2 col-md-10">
                 <button type="submit" class="btn btn-default">Register</button>
             </div>
+             <div>
+           
+              <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login"> Go to Login</a>
+            
+        </div>
         </div>
     </form>
 </div>
